stale scope of websocket connection

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <style>
+    /* https://github.com/facebook/create-react-app/issues/9870 */
+    #root {
+      background: url('/bg.webp');
+    }
+  </style>
   <title>circa</title>
 </head>
 
